# cftool

./: .gitignore  Cargo.toml  Makefile  README.md  README.org  buildinstall.sh  cftool  cftool.rkt  cftool_2.rkt  cftool_3.rkt  config.mk
src/: aws.rs  config.rs  helpers.rs  main.rs
