[package]
name = "cft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
console = "0.15.7"
env_logger = "0.10.0"
log = { version = "0.4.20", features = ["std", "serde"] }
serde = { version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"
serde_yaml = "0.9.27"
similar = { version = "2.3.0", features = ["unicode", "inline", "serde"] }
